# NS_CanvasAPI

./: README.md  connect.py  pyproject.toml
ns_canvasapi_gui/: display.py  general_style.py  util.py
ns_canvasapi_tools/: util.py
src/: connect.py
src/ns_canvasapi_gui/: ctk_extensions.py  frames.py  util.py
src/ns_canvasapi_tools/: assignment_generator.py  course_navigator.py  date_adjuster.py  menu.py  new_semester_date_adjuster.py  util.py
